// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pregenerated-lib returns description of the service 1`] = `"SAP Cloud SDK for JavaScript: Virtual Data Model (VDM) for service test-service"`;

exports[`sdk-metadata [E2E] generates the JS metadata content for services with pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": "import { TestEntity } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = TestEntity.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
    "generationSteps": "<ul>
<li>Download the API specification to your local computer.</li>
<li>Install the generator <code>npm install -g @sap-cloud-sdk/generator</code></li>
<li>Execute the generator <code>generate-odata-client --inputDir path/to/service-spec --outputDir path/to/</code></li>
</ul>
For additional information please consider our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">documentation</a>",
    "genericUsage": "import { BusinessPartner } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = BusinessPartner.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
    "links": Object {
      "apiHubTutorial": "https://sap.github.io/cloud-sdk/docs/js/features/odata/execute-odata-request",
      "featureDocumentation": "https://sap.github.io/cloud-sdk/docs/js/features/odata/use-odata-v2-type-safe-client-for-javascript-typescript",
      "generationManual": "https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client",
      "sdkDocumentation": "https://sap.github.io/cloud-sdk/",
      "support": "https://github.com/SAP/cloud-sdk-js/issues/new/choose",
    },
  },
  "language": "javascript",
  "pregeneratedLibrary": Object {
    "compatibilityNotes": "",
    "dependencyName": "@sap/cloud-sdk-vdm-business-partner-service",
    "description": "SAP Cloud SDK for JavaScript: Virtual Data Model (VDM) for service test-service",
    "generatedAt": "/Date(0)/",
    "installLibrarySnippet": "npm i @sap/cloud-sdk-vdm-business-partner-service:latest",
    "repository": "npm",
    "repositoryLink": "https://www.npmjs.com/package/@sap/cloud-sdk-vdm-business-partner-service",
    "version": "1.0.0",
  },
  "serviceStatus": "certified",
}
`;

exports[`sdk-metadata [E2E] generates the JS metadata content for services without pregenerated lib 1`] = `
Object {
  "generationAndUsage": Object {
    "apiSpecificUsage": "import { TestEntity } from 'non-existing-package';

const resultPromise = TestEntity.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
    "generationSteps": "<ul>
<li>Download the API specification to your local computer.</li>
<li>Install the generator <code>npm install -g @sap-cloud-sdk/generator</code></li>
<li>Execute the generator <code>generate-odata-client --inputDir path/to/service-spec --outputDir path/to/</code></li>
</ul>
For additional information please consider our <a href=\\"https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client\\">documentation</a>",
    "genericUsage": "import { BusinessPartner } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = BusinessPartner.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
    "links": Object {
      "apiHubTutorial": "https://sap.github.io/cloud-sdk/docs/js/features/odata/execute-odata-request",
      "featureDocumentation": "https://sap.github.io/cloud-sdk/docs/js/features/odata/use-odata-v2-type-safe-client-for-javascript-typescript",
      "generationManual": "https://sap.github.io/cloud-sdk/docs/js/features/odata/generate-odata-client",
      "sdkDocumentation": "https://sap.github.io/cloud-sdk/",
      "support": "https://github.com/SAP/cloud-sdk-js/issues/new/choose",
    },
  },
  "language": "javascript",
  "pregeneratedLibrary": undefined,
  "serviceStatus": "verified",
}
`;

exports[`sdk-metadata generates the File names 1`] = `
Object {
  "clientFileName": "MyService_CLIENT_JS.json",
  "headerFileName": "MyService_HEADER.json",
}
`;

exports[`sdk-metadata generates the header content 1`] = `
Object {
  "name": "API_TEST_SRV",
  "type": "odata",
  "version": "1.0.0",
}
`;
